--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "jalali-moment": "^3.3.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
