--- a/package.json
+++ b/package.json
@@ -2,17 +2,12 @@
   "name": "ekelaas",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "http://git.tanami.org/Chubak/eKelaas.git"
-  },
   "author": "Chubak",
-  "license": "ISC",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "main": "server.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
@@ -25,9 +20,19 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.9.3",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.5",
+    "vuetify-loader": "^1.3.0"
+  },
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "http://git.tanami.org/Chubak/eKelaas.git"
   }
 }
