--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-page-title": "^1.1.6",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
